--- a/src/main_tune.ipynb
+++ b/src/main_tune.ipynb
@@ -25,8 +25,8 @@
    "id": "af16e0d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T01:44:04.754954Z",
-     "start_time": "2023-03-13T01:44:02.353996Z"
+     "end_time": "2023-03-13T02:27:20.410878Z",
+     "start_time": "2023-03-13T02:27:18.006843Z"
     },
     "cell_style": "center",
     "init_cell": true,
@@ -76,8 +76,8 @@
    "id": "beb97ae7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T01:44:04.759867Z",
-     "start_time": "2023-03-13T01:44:04.757058Z"
+     "end_time": "2023-03-13T02:27:20.416096Z",
+     "start_time": "2023-03-13T02:27:20.413287Z"
     },
     "init_cell": true
    },
@@ -87,7 +87,7 @@
     "NUM_SAMPLES = 30\n",
     "NUM_MODEL_TEST = 5\n",
     "\n",
-    "NB_AUGMENT = 2\n",
+    "NUM_AUGMENT = 2\n",
     "\n",
     "LOAD_DATA_ON_GPU = False\n",
     "GPUS_PER_TRIAL = 1\n",
@@ -108,8 +108,8 @@
    "id": "626acb32",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T01:44:04.770712Z",
-     "start_time": "2023-03-13T01:44:04.761540Z"
+     "end_time": "2023-03-13T02:27:20.426959Z",
+     "start_time": "2023-03-13T02:27:20.417874Z"
     },
     "code_folding": [
      0
@@ -217,13 +217,10 @@
    "id": "da4d17c2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T01:44:04.780687Z",
-     "start_time": "2023-03-13T01:44:04.773025Z"
+     "end_time": "2023-03-13T02:27:20.436945Z",
+     "start_time": "2023-03-13T02:27:20.429350Z"
     },
-    "code_folding": [
-     0,
-     27
-    ],
+    "code_folding": [],
     "init_cell": true
    },
    "outputs": [],
@@ -300,12 +297,10 @@
    "id": "05b7f919",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T01:44:04.786138Z",
-     "start_time": "2023-03-13T01:44:04.782338Z"
+     "end_time": "2023-03-13T02:27:20.442603Z",
+     "start_time": "2023-03-13T02:27:20.438564Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "init_cell": true
    },
    "outputs": [],
@@ -352,8 +347,8 @@
    "id": "e1e136d1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T01:44:04.791799Z",
-     "start_time": "2023-03-13T01:44:04.787842Z"
+     "end_time": "2023-03-13T02:27:20.448080Z",
+     "start_time": "2023-03-13T02:27:20.444336Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -383,8 +378,8 @@
    "id": "dd6be70b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T01:44:04.874948Z",
-     "start_time": "2023-03-13T01:44:04.793563Z"
+     "end_time": "2023-03-13T02:27:20.528815Z",
+     "start_time": "2023-03-13T02:27:20.449902Z"
     },
     "init_cell": true
    },
@@ -412,57 +407,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e15a7a2f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T01:45:18.910151Z",
-     "start_time": "2023-03-13T01:44:09.969750Z"
+     "start_time": "2023-03-13T02:27:02.599Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading dataset into RAM: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████| 2744/2744 [00:36<00:00, 75.05it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\t- Loading done, RAM used: 3.78GiB / free: 117.85GiB / total: 125.40GiB\n",
-      "\t- Got a total of 2744 images.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Expending the dataset 2 more times: 100%|██████████████████████████████████████████████████████████████████████████████████████████████| 1920/1920 [00:32<00:00, 59.35it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\t- Augmentation done, RAM used: 7.19GiB / free: 114.41GiB / total: 125.40GiB\n",
-      "\t- Got 3840 new images and a total of 5760 images.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_reader = POCDataReader(root_dir=\"../data\", load_on_gpu=LOAD_DATA_ON_GPU)\n",
     "train_data, val_data, test_data = data_reader.split([0.7, 0.1, 0.2])\n",
-    "data_augment_(train_data, n=NB_AUGMENT, load_on_gpu=LOAD_DATA_ON_GPU)"
+    "data_augment_(train_data, n=NUM_AUGMENT, load_on_gpu=LOAD_DATA_ON_GPU)"
    ]
   },
   {
@@ -479,8 +435,8 @@
    "id": "a69701ba",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-10T05:51:22.991593Z",
-     "start_time": "2023-03-10T05:51:16.634452Z"
+     "end_time": "2023-03-13T02:12:35.300584Z",
+     "start_time": "2023-03-13T02:12:28.435199Z"
     }
    },
    "outputs": [],
