Adding Input Pipeline

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -104,6 +104,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ffda110",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torchvision.transforms.functional import invert\n",
+    "from torch.nn.functional import normalize\n",
+    "\n",
+    "from pipelines import InputPipeline, LaplacianFilter, SobelFilter\n",
+    "\n",
+    "inpip = InputPipeline(\n",
+    "    transformer=[invert, normalize],\n",
+    "    layer_transformer=[\n",
+    "        LaplacianFilter(),\n",
+    "        SobelFilter()]\n",
+    ").to(device)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b402242d",
    "metadata": {},
@@ -130,7 +150,7 @@
     "\n",
     "train_dataset = POCDataset(\n",
     "    train_data,\n",
-    "    transform=normalize,\n",
+    "    transform=inpip,\n",
     "    target_transform= GaussianBlur(kernel_size=3, sigma=0.7) if soft_labels else None,\n",
     "    negative_mining=negative_mining,\n",
     ")"
