Saving main_tune

--- a/src/main_tune.ipynb
+++ b/src/main_tune.ipynb
@@ -25,8 +25,8 @@
    "id": "af16e0d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T02:27:20.410878Z",
-     "start_time": "2023-03-13T02:27:18.006843Z"
+     "end_time": "2023-03-14T01:14:11.163381Z",
+     "start_time": "2023-03-14T01:14:06.384705Z"
     },
     "cell_style": "center",
     "init_cell": true,
@@ -76,8 +76,8 @@
    "id": "beb97ae7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T02:27:20.416096Z",
-     "start_time": "2023-03-13T02:27:20.413287Z"
+     "end_time": "2023-03-14T01:14:11.168239Z",
+     "start_time": "2023-03-14T01:14:11.165540Z"
     },
     "init_cell": true
    },
@@ -108,8 +108,8 @@
    "id": "626acb32",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T02:27:20.426959Z",
-     "start_time": "2023-03-13T02:27:20.417874Z"
+     "end_time": "2023-03-14T01:14:11.180776Z",
+     "start_time": "2023-03-14T01:14:11.169850Z"
     },
     "code_folding": [
      0
@@ -217,10 +217,13 @@
    "id": "da4d17c2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T02:27:20.436945Z",
-     "start_time": "2023-03-13T02:27:20.429350Z"
+     "end_time": "2023-03-14T01:14:11.190399Z",
+     "start_time": "2023-03-14T01:14:11.183037Z"
     },
-    "code_folding": [],
+    "code_folding": [
+     0,
+     27
+    ],
     "init_cell": true
    },
    "outputs": [],
@@ -297,10 +300,12 @@
    "id": "05b7f919",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T02:27:20.442603Z",
-     "start_time": "2023-03-13T02:27:20.438564Z"
+     "end_time": "2023-03-14T01:14:11.195541Z",
+     "start_time": "2023-03-14T01:14:11.191954Z"
     },
-    "code_folding": [],
+    "code_folding": [
+     0
+    ],
     "init_cell": true
    },
    "outputs": [],
@@ -347,8 +352,8 @@
    "id": "e1e136d1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T02:27:20.448080Z",
-     "start_time": "2023-03-13T02:27:20.444336Z"
+     "end_time": "2023-03-14T01:14:11.209192Z",
+     "start_time": "2023-03-14T01:14:11.197101Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -378,8 +383,8 @@
    "id": "dd6be70b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T02:27:20.528815Z",
-     "start_time": "2023-03-13T02:27:20.449902Z"
+     "end_time": "2023-03-14T01:14:11.323837Z",
+     "start_time": "2023-03-14T01:14:11.210587Z"
     },
     "init_cell": true
    },
@@ -407,14 +412,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e15a7a2f",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-03-13T02:27:02.599Z"
+     "end_time": "2023-03-13T03:50:10.663512Z",
+     "start_time": "2023-03-13T03:49:04.036572Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b529bade3c004dd2a7bfe3f3e26b8348",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading dataset into RAM:   0%|          | 0/2744 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t- Loading done, RAM used: 3.84GiB / free: 102.69GiB / total: 125.40GiB\n",
+      "\t- Got a total of 2744 images.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ebc7e20abf3448adbd64076f1dffb89a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Expending the dataset 2 more times:   0%|          | 0/1920 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t- Augmentation done, RAM used: 7.25GiB / free: 99.28GiB / total: 125.40GiB\n",
+      "\t- Got 3840 new images and a total of 5760 images.\n"
+     ]
+    }
+   ],
    "source": [
     "data_reader = POCDataReader(root_dir=\"../data\", load_on_gpu=LOAD_DATA_ON_GPU)\n",
     "train_data, val_data, test_data = data_reader.split([0.7, 0.1, 0.2])\n",
@@ -431,17 +482,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "a69701ba",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-13T02:12:35.300584Z",
-     "start_time": "2023-03-13T02:12:28.435199Z"
+     "end_time": "2023-03-13T03:51:23.168650Z",
+     "start_time": "2023-03-13T03:51:17.172864Z"
     }
    },
    "outputs": [],
    "source": [
-    "scheduler = ASHAScheduler(max_t=EPOCHS, grace_period=1, reduction_factor=2)\n",
+    "scheduler = ASHAScheduler(max_t=EPOCHS, grace_period=2, reduction_factor=2)\n",
     "search_algo = HyperOptSearch()\n",
     "\n",
     "tune_config = tune.TuneConfig(\n",
@@ -469,15 +520,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cdfb3720",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-03-10T05:51:24.974Z"
+     "end_time": "2023-03-14T01:15:21.989725Z",
+     "start_time": "2023-03-14T01:15:21.969149Z"
     },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'tuner' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mtuner\u001b[49m\u001b[38;5;241m.\u001b[39mfit()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'tuner' is not defined"
+     ]
+    }
+   ],
    "source": [
     "results = tuner.fit()"
    ]
