Saving main_tune

--- a/src/main_tune.ipynb
+++ b/src/main_tune.ipynb
@@ -21,12 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "af16e0d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-14T01:14:11.163381Z",
-     "start_time": "2023-03-14T01:14:06.384705Z"
+     "end_time": "2023-03-16T08:40:38.583333Z",
+     "start_time": "2023-03-16T08:40:38.558480Z"
     },
     "cell_style": "center",
     "init_cell": true,
@@ -34,7 +34,19 @@
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pipeline'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 24\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m UNet\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mloss\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m---> 24\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpipeline\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtrain\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m training_loop, validation_loop\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtrain_tqdm\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m evaluation_loop\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pipeline'"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "\n",
@@ -45,6 +57,7 @@
     "from torch.optim.lr_scheduler import CosineAnnealingLR\n",
     "from torch.utils.data import DataLoader\n",
     "from torchvision.transforms import GaussianBlur\n",
+    "from torchvision.transforms.functional import invert\n",
     "\n",
     "import ray\n",
     "from ray import tune\n",
@@ -58,6 +71,7 @@
     "from metrics import Metrics, EvaluationMetrics\n",
     "from models import UNet\n",
     "from loss import *\n",
+    "from pipeline import *\n",
     "from train import training_loop, validation_loop\n",
     "from train_tqdm import evaluation_loop\n"
    ]
@@ -72,12 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "beb97ae7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-14T01:14:11.168239Z",
-     "start_time": "2023-03-14T01:14:11.165540Z"
+     "end_time": "2023-03-16T08:40:38.586867Z",
+     "start_time": "2023-03-16T08:40:38.586856Z"
     },
     "init_cell": true
    },
@@ -104,12 +118,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "626acb32",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-14T01:14:11.180776Z",
-     "start_time": "2023-03-14T01:14:11.169850Z"
+     "end_time": "2023-03-16T08:40:38.588646Z",
+     "start_time": "2023-03-16T08:40:38.588635Z"
     },
     "code_folding": [
      0
@@ -124,7 +138,7 @@
     "\n",
     "    train_dataset = POCDataset(\n",
     "        train_data,\n",
-    "        transform=normalize,\n",
+    "        transform=config[\"input_pipeline\"],\n",
     "        target_transform= GaussianBlur(kernel_size=3, sigma=0.7) if config[\"SL\"] else None,\n",
     "        negative_mining=config[\"NM\"])\n",
     "    training_dataloader = DataLoader(\n",
@@ -135,7 +149,7 @@
     "        pin_memory=True,\n",
     "        pin_memory_device=device)\n",
     "\n",
-    "    val_dataset = POCDataset(val_data, transform=normalize, target_transform=None, negative_mining=False)\n",
+    "    val_dataset = POCDataset(val_data, transform=config[\"input_pipeline\"], target_transform=None, negative_mining=False)\n",
     "    validation_dataloader = DataLoader(\n",
     "        val_dataset,\n",
     "        batch_size=int(config[\"batch_size\"]),\n",
@@ -213,12 +227,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "da4d17c2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-14T01:14:11.190399Z",
-     "start_time": "2023-03-14T01:14:11.183037Z"
+     "end_time": "2023-03-16T08:40:38.589684Z",
+     "start_time": "2023-03-16T08:40:38.589673Z"
     },
     "code_folding": [
      0,
@@ -296,12 +310,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "05b7f919",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-14T01:14:11.195541Z",
-     "start_time": "2023-03-14T01:14:11.191954Z"
+     "end_time": "2023-03-16T08:40:38.590958Z",
+     "start_time": "2023-03-16T08:40:38.590947Z"
     },
     "code_folding": [
      0
@@ -331,6 +345,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4efbeca",
+   "metadata": {
+    "code_folding": [
+     0
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def input_pip_sampler():\n",
+    "    transformers_list = [\n",
+    "        [invert, normalize],\n",
+    "        [normalize],\n",
+    "    ]\n",
+    "    layer_transformers_list = [\n",
+    "        None,\n",
+    "        LaplacianFilter(),\n",
+    "        SobelFilter(),\n",
+    "    ]\n",
+    "\n",
+    "    return [InputPipeline(transformer, layer_transformer) for transformer in transformers_list for layer_transformer in layer_transformers_list]\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "918e1c03",
    "metadata": {},
@@ -348,12 +387,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e1e136d1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-14T01:14:11.209192Z",
-     "start_time": "2023-03-14T01:14:11.197101Z"
+     "end_time": "2023-03-16T08:40:38.593114Z",
+     "start_time": "2023-03-16T08:40:38.593096Z"
     },
     "code_folding": [],
     "init_cell": true
@@ -361,11 +400,12 @@
    "outputs": [],
    "source": [
     "search_space = {\n",
-    "    \"lr\": tune.qloguniform(1e-5, 1e-2, 5e-6),\n",
-    "    \"batch_size\": tune.qrandint(2, 8, 2),\n",
+    "    \"lr\": 1e-4, #tune.qloguniform(1e-5, 1e-2, 5e-6),\n",
+    "    \"batch_size\": 4, #tune.qrandint(2, 8, 2),\n",
     "    \"NM\": tune.choice([True, False]),\n",
     "    \"SL\": tune.choice([True, False]),\n",
     "    \"loss_fn\": tune.choice(loss_fn_sampler()),\n",
+    "    \"input_pipeline\": tune.choice(input_pip_sampler())\n",
     "}"
    ]
   },
@@ -379,24 +419,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "dd6be70b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-14T01:14:11.323837Z",
-     "start_time": "2023-03-14T01:14:11.210587Z"
+     "end_time": "2023-03-16T08:40:38.594785Z",
+     "start_time": "2023-03-16T08:40:38.594768Z"
     },
     "init_cell": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using cuda device\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "print(f\"Using {device} device\")"
