Adding Final Input Pipeline for Training

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -54,17 +54,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ab658774",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-07T07:53:40.420724Z",
-     "start_time": "2023-03-07T07:53:39.397730Z"
+     "end_time": "2023-03-17T01:52:57.383972Z",
+     "start_time": "2023-03-17T01:52:56.469585Z"
     },
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cuda device\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "\n",
@@ -105,9 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1ffda110",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-17T01:52:59.245406Z",
+     "start_time": "2023-03-17T01:52:58.076156Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from torchvision.transforms.functional import invert\n",
@@ -121,6 +134,29 @@
     "        LaplacianFilter(),\n",
     "        SobelFilter()]\n",
     ").to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1f5f3ac6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-17T01:52:59.251541Z",
+     "start_time": "2023-03-17T01:52:59.247799Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "InputPipeline(invert,normalize+LaplacianFilter,SobelFilter)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(inpip)"
    ]
   },
   {
