--- a/src/main_tune.ipynb
+++ b/src/main_tune.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "EPOCHS = 15\n",
     "NUM_SAMPLES = 30\n",
-    "NUM_MODEL_TEST = 5\n",
+    "NUM_MODEL_TEST = 10\n",
     "\n",
     "NUM_AUGMENT = 1\n",
     "\n",
@@ -157,8 +157,13 @@
      "start_time": "2023-03-20T01:41:49.236565Z"
     },
     "code_folding": [],
+    "deletable": false,
+    "editable": false,
     "hidden": true,
-    "init_cell": true
+    "init_cell": true,
+    "run_control": {
+     "frozen": true
+    }
    },
    "outputs": [],
    "source": [
@@ -205,15 +210,22 @@
    "outputs": [],
    "source": [
     "search_space = {\n",
-    "    \"lr\": 1e-4, #tune.qloguniform(1e-5, 1e-2, 5e-6),\n",
-    "    \"batch_size\": 4, #tune.qrandint(2, 8, 2),\n",
-    "    \"NM\": tune.choice([True, False]),\n",
-    "    \"SL\": tune.choice([True, False]),\n",
-    "   \n",
-    "    \"loss_fn\": tune.choice(loss_fn_sampler()),\n",
+    "    \"Network\": UNet,\n",
+    "    \"Optimizer\": Adam,\n",
+    "    \n",
+    "    \"Learning Rate\": 1e-4,   #tune.qloguniform(1e-5, 1e-2, 5e-6),\n",
+    "    \"Batch Size\": 4,         #tune.qrandint(2, 8, 2),\n",
     "\n",
-    "    \"input_filter\": tune.choice([None, invert]),\n",
-    "    \"input_layer\": tune.choice([None, LaplacianFilter(), SobelFilter()]),\n",
+    "\n",
+    "    \"Pixel Loss\": tune.choice([CrossEntropyLoss(weight=torch.tensor([.3, .7])), FocalLoss(weight=torch.tensor([.3, .7]), gamma=2)])\n",
+    "    \"Volume Loss\": tune.choice([JaccardLoss(), TverskyLoss(alpha=0.3, beta=0.7), FocalTverskyLoss(alpha=0.3, beta=0.7, gamma=2)])\n",
+    "    \"Combine Loss\": tune.choice([CombinedLoss, BorderedLoss, PixelLoss, VolumeLoss])\n",
+    "    \n",
+    "    \"Negative Mining\": tune.choice([True, False]),\n",
+    "    \"Smooth Labeling\": tune.choice([True, False]),\n",
+    "\n",
+    "    \"Input Filter\": tune.choice([None, invert]),\n",
+    "    \"Input Layer\": tune.choice([None, LaplacianFilter(), SobelFilter(), DINOFilter()]),\n",
     "}"
    ]
   },
@@ -246,53 +258,56 @@
     "    device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "    \n",
     "    inpip = InputPipeline(\n",
-    "        transformer=[normalize, config[\"input_filter\"]] if config[\"input_filter\"] is not None else normalize, \n",
-    "        layer_transformer=config[\"input_layer\"]).to(device)\n",
+    "        transformer=[normalize, config[\"Input Filter\"]] if config[\"Input Filter\"] is not None else normalize, \n",
+    "        layer_transformer=config[\"Input Layer\"])\n",
+    "    if LOAD_DATA_ON_GPU:\n",
+    "        inpip = inpip.to(device)\n",
     "\n",
     "    train_dataset = POCDataset(\n",
     "        train_data,\n",
     "        transform=inpip,\n",
-    "        target_transform= GaussianBlur(kernel_size=3, sigma=0.7) if config[\"SL\"] else None,\n",
-    "        negative_mining=config[\"NM\"])\n",
+    "        target_transform= GaussianBlur(kernel_size=3, sigma=0.7) if config[\"Smooth Labeling\"] else None,\n",
+    "        negative_mining=config[\"Negative Mining\"])\n",
+    "#     train_dataset.precompute_transform(LOAD_DATA_ON_GPU)\n",
     "\n",
     "    if LOAD_DATA_ON_GPU:\n",
     "        training_dataloader = DataLoader(\n",
     "            train_dataset,\n",
-    "            batch_size=int(config[\"batch_size\"]),\n",
+    "            batch_size=int(config[\"Batch Size\"]),\n",
     "            sampler=train_dataset.sampler)\n",
     "    else:\n",
     "        training_dataloader = DataLoader(\n",
     "            train_dataset,\n",
-    "            batch_size=int(config[\"batch_size\"]),\n",
+    "            batch_size=int(config[\"Batch Size\"]),\n",
     "            sampler=train_dataset.sampler,\n",
     "            num_workers=CPUS_PER_TRIAL//2,\n",
     "            pin_memory=True,\n",
     "            pin_memory_device=device)\n",
     "\n",
     "    val_dataset = POCDataset(val_data, transform=inpip, target_transform=None, negative_mining=False)\n",
+    "#     val_dataset.precompute_transform(LOAD_DATA_ON_GPU)\n",
     "    \n",
     "    if LOAD_DATA_ON_GPU:\n",
     "        validation_dataloader = DataLoader(\n",
     "            val_dataset,\n",
-    "            batch_size=int(config[\"batch_size\"]),\n",
+    "            batch_size=int(config[\"Batch Size\"]),\n",
     "            shuffle=True)\n",
     "    else:\n",
     "        validation_dataloader = DataLoader(\n",
     "            val_dataset,\n",
-    "            batch_size=int(config[\"batch_size\"]),\n",
+    "            batch_size=int(config[\"Batch Size\"]),\n",
     "            shuffle=True,\n",
     "            num_workers=CPUS_PER_TRIAL//2,\n",
     "            pin_memory=True,\n",
     "            pin_memory_device=device)\n",
     "\n",
-    "    model = UNet(n_channels=inpip.nb_channel, n_classes=2, bilinear=True, crop=False)\n",
+    "    model = config[\"Network\"](n_channels=inpip.nb_channel, n_classes=2, bilinear=True, crop=False)\n",
     "    if torch.cuda.is_available() and torch.cuda.device_count() > 1:\n",
     "        model = nn.DataParallel(model)\n",
     "    model.to(device)\n",
     "\n",
-    "    loss_fn = config[\"loss_fn\"].to(device)\n",
-    "#     loss_fn = config[\"loss_combinator\"](config[\"loss_pixel\"], config[\"loss_volume\"]).to(device)\n",
-    "    optimizer = Adam(model.parameters(), lr=config[\"lr\"], betas=(0.9, 0.99))\n",
+    "    loss_fn = config[\"Combine Loss\"](config[\"Pixel Loss\"], config[\"Volume Loss\"]).to(device)\n",
+    "    optimizer = config[\"Optimizer\"](model.parameters(), lr=config[\"Learning Rate\"], betas=(0.9, 0.99))\n",
     "    lr_scheduler = CosineAnnealingLR(optimizer, T_max=EPOCHS//2)\n",
     "\n",
     "    # To restore a checkpoint, use `session.get_checkpoint()`.\n",
@@ -307,27 +322,13 @@
     "    train_metrics = Metrics(\n",
     "        buffer_size=len(training_dataloader),\n",
     "        mode=\"Training\",\n",
-    "        model_name=model.__class__.__name__,\n",
-    "        loss_name=loss_fn.__class__.__name__,\n",
-    "        opt_name=optimizer.__class__.__name__,\n",
-    "        pip_name=str(inpip),\n",
-    "        batch_size=config[\"batch_size\"],\n",
-    "        learning_rate=config[\"lr\"],\n",
-    "        negative_mining=config[\"NM\"],\n",
-    "        soft_labels=config[\"SL\"],\n",
+    "        hyperparam=config,\n",
     "        device=device)\n",
     "\n",
     "    val_metrics = Metrics(\n",
     "        buffer_size=len(validation_dataloader),\n",
     "        mode=\"Validation\",\n",
-    "        model_name=model.__class__.__name__,\n",
-    "        loss_name=loss_fn.__class__.__name__,\n",
-    "        opt_name=optimizer.__class__.__name__,\n",
-    "        pip_name=str(inpip),\n",
-    "        batch_size=config[\"batch_size\"],\n",
-    "        learning_rate=config[\"lr\"],\n",
-    "        negative_mining=config[\"NM\"],\n",
-    "        soft_labels=config[\"SL\"],\n",
+    "        hyperparam=config,\n",
     "        device=device)\n",
     "\n",
     "\n",
@@ -366,7 +367,7 @@
     },
     "code_folding": [
      0,
-     38
+     32
     ],
     "init_cell": true
    },
@@ -377,8 +378,10 @@
     "    device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
     "    inpip = InputPipeline(\n",
-    "        transformer=best_result.config[\"input_filter\"],\n",
-    "        layer_transformer=best_result.config[\"input_layer\"]).to(device)\n",
+    "        transformer=[normalize, best_result.config[\"Input Filter\"]] if best_result.config[\"Input Filter\"] is not None else normalize, \n",
+    "        layer_transformer=best_result.config[\"Input Layer\"])\n",
+    "    if LOAD_DATA_ON_GPU:\n",
+    "        inpip = inpip.to(device)\n",
     "\n",
     "    test_dataset = POCDataset(test_data, transform=inpip, target_transform=None, negative_mining=False)\n",
     "    \n",
@@ -387,25 +390,17 @@
     "    else:\n",
     "        evaluation_dataloader = DataLoader(test_dataset, batch_size=1, shuffle=True, num_workers=20, pin_memory=True, pin_memory_device=device)\n",
     "\n",
-    "    best_trained_model = UNet(n_channels=inpip.nb_channel, n_classes=2, bilinear=True, crop=False).to(device)\n",
+    "    best_trained_model = best_result.config[\"Network\"](n_channels=inpip.nb_channel, n_classes=2, bilinear=True, crop=False).to(device)\n",
     "\n",
     "    checkpoint_path = os.path.join(best_result.checkpoint.to_directory(), \"checkpoint.pt\")\n",
     "    model_state, _, _ = torch.load(checkpoint_path)\n",
     "    best_trained_model.load_state_dict(model_state)\n",
     "    \n",
-    "    loss_fn_name = str(best_result.config[\"loss_fn\"])\n",
+    "    loss_fn = best_result.config[\"Combine Loss\"](best_result.config[\"Pixel Loss\"], best_result.config[\"Volume Loss\"]).to(device)\n",
     "\n",
     "    test_metrics = EvaluationMetrics(\n",
     "        buffer_size=len(evaluation_dataloader),\n",
-    "        model_name=best_trained_model.__class__.__name__,\n",
-    "        loss_name=loss_fn_name,\n",
-    "        opt_name=\"Adam\",\n",
-    "        pip_name=str(inpip),\n",
-    "        epochs=EPOCHS,\n",
-    "        batch_size=best_result.config[\"batch_size\"],\n",
-    "        learning_rate=best_result.config[\"lr\"],\n",
-    "        negative_mining=best_result.config[\"NM\"],\n",
-    "        soft_labels=best_result.config[\"SL\"],\n",
+    "        hyperparam=best_result.config,\n",
     "        device=device)\n",
     "\n",
     "    evaluation_loop(dataloader=evaluation_dataloader, model=best_trained_model, metric=test_metrics, device=device)\n",
@@ -418,8 +413,10 @@
     "    for index, res in results_df.head(NUM_MODEL_TEST).iterrows():\n",
     "        \n",
     "        inpip = InputPipeline(\n",
-    "            transformer=res[\"config/input_filter\"],\n",
-    "            layer_transformer=res[\"config/input_layer\"]).to(device)\n",
+    "            transformer=eval(res[\"config/Input Filter\"]),\n",
+    "            layer_transformer=eval(res[\"config/Input Layer\"]))\n",
+    "        if LOAD_DATA_ON_GPU:\n",
+    "            inpip = inpip.to(device)\n",
     "        \n",
     "        test_dataset = POCDataset(test_data, transform=inpip, target_transform=None, negative_mining=False)\n",
     "\n",
@@ -428,25 +425,19 @@
     "        else:\n",
     "            evaluation_dataloader = DataLoader(test_dataset, batch_size=1, shuffle=True, num_workers=20, pin_memory=True, pin_memory_device=device)\n",
     "\n",
-    "        trained_model = UNet(n_channels=inpip.nb_channel, n_classes=2, bilinear=True, crop=False).to(device)\n",
+    "        trained_model = eval(res[\"config/Network\"])(n_channels=inpip.nb_channel, n_classes=2, bilinear=True, crop=False).to(device)\n",
     "\n",
     "        checkpoint_path = os.path.join(res[\"logdir\"], \"model/checkpoint.pt\")\n",
     "        model_state, _, _ = torch.load(checkpoint_path)\n",
     "        trained_model.load_state_dict(model_state)\n",
     "        \n",
     "        loss_fn_name = str(res[\"config/loss_fn\"])\n",
+    "        \n",
+    "        loss_fn = eval(res[\"config/Combine Loss\"])(eval(res[\"config/Pixel Loss\"]), eval(res[\"config/Volume Loss\"])).to(device)\n",
     "\n",
     "        test_metrics = EvaluationMetrics(\n",
     "            buffer_size=len(evaluation_dataloader),\n",
-    "            model_name=trained_model.__class__.__name__,\n",
-    "            loss_name=loss_fn_name,\n",
-    "            opt_name=\"Adam\",\n",
-    "            pip_name=str(inpip),\n",
-    "            epochs=res[\"Epoch\"],\n",
-    "            batch_size=res[\"config/batch_size\"],\n",
-    "            learning_rate=res[\"config/lr\"],\n",
-    "            negative_mining=res[\"config/NM\"],\n",
-    "            soft_labels=res[\"config/SL\"],\n",
+    "            hyperparam=\n",
     "            device=device)\n",
     "\n",
     "        evaluation_loop(dataloader=evaluation_dataloader, model=trained_model, metric=test_metrics, device=device)\n"
@@ -899,6 +890,14 @@
      "varRefreshCmd": "cat(var_dic_list()) "
     }
    },
+   "oldHeight": 122.844,
+   "position": {
+    "height": "40px",
+    "left": "1576px",
+    "right": "20px",
+    "top": "120px",
+    "width": "250px"
+   },
    "types_to_exclude": [
     "module",
     "function",
@@ -906,7 +905,8 @@
     "instance",
     "_Feature"
    ],
-   "window_display": false
+   "varInspector_section_display": "none",
+   "window_display": true
   }
  },
  "nbformat": 4,
