--- a/src/main_tune.ipynb
+++ b/src/main_tune.ipynb
@@ -55,7 +55,7 @@
     "from ray.tune.search.hyperopt import HyperOptSearch\n",
     "\n",
     "\n",
-    "from Dataset import POCDataReader, data_augment_, POCDataset\n",
+    "from dataset import POCDataReader, data_augment_, POCDataset\n",
     "from metrics import Metrics, EvaluationMetrics\n",
     "from models import UNet\n",
     "from loss import *\n",
@@ -195,9 +195,7 @@
      "end_time": "2023-03-21T07:38:52.903695Z",
      "start_time": "2023-03-21T07:38:52.892801Z"
     },
-    "code_folding": [
-     0
-    ],
+    "code_folding": [],
     "init_cell": true
    },
    "outputs": [],
@@ -313,28 +311,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "ecd05973",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-03-22T02:12:29.536780Z",
-     "start_time": "2023-03-22T02:12:29.525174Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# import metrics\n",
-    "# from metrics import EvaluationMetrics\n",
-    "\n",
-    "# import sys\n",
-    "from importlib import reload\n",
-    "# del sys.modules['metrics.metrics'] \n",
-    "reload(metrics.metrics)\n",
-    "from metrics.metrics import EvaluationMetrics"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 52,
    "id": "da4d17c2",
    "metadata": {
@@ -343,7 +319,7 @@
      "start_time": "2023-03-22T02:12:32.401136Z"
     },
     "code_folding": [
-     30
+     0
     ],
     "init_cell": true
    },
@@ -378,54 +354,7 @@
     "        epochs=result.metrics[\"Epoch\"],\n",
     "        device=device)\n",
     "\n",
-    "    evaluation_loop(dataloader=evaluation_dataloader, model=best_trained_model, metric=test_metrics, device=device)\n",
-    "\n",
-    "def evaluate_df(test_data, results_df):\n",
-    "\n",
-    "    device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
-    "\n",
-    "    results_df.sort_values(\"CrackIoU\", ascending=False, inplace=True)\n",
-    "    for index, res in results_df.head(NUM_MODEL_TEST).iterrows():\n",
-    "        \n",
-    "        inpip = InputPipeline(\n",
-    "            transformer=eval(res[\"config/Input Filter\"]),\n",
-    "            layer_transformer=eval(res[\"config/Input Layer\"]))\n",
-    "        if LOAD_DATA_ON_GPU:\n",
-    "            inpip = inpip.to(device)\n",
-    "        \n",
-    "        test_dataset = POCDataset(test_data, transform=inpip, target_transform=None, negative_mining=False)\n",
-    "\n",
-    "        if LOAD_DATA_ON_GPU:\n",
-    "            evaluation_dataloader = DataLoader(test_dataset, batch_size=1, shuffle=True)\n",
-    "        else:\n",
-    "            evaluation_dataloader = DataLoader(test_dataset, batch_size=1, shuffle=True, num_workers=20, pin_memory=True, pin_memory_device=device)\n",
-    "\n",
-    "        trained_model = eval(res[\"config/Network\"])(n_channels=inpip.nb_channel, n_classes=2, bilinear=True, crop=False).to(device)\n",
-    "\n",
-    "        checkpoint_path = os.path.join(res[\"logdir\"], \"model/checkpoint.pt\")\n",
-    "        model_state, _, _ = torch.load(checkpoint_path)\n",
-    "        trained_model.load_state_dict(model_state)\n",
-    "\n",
-    "        hyperparam = {\n",
-    "            \"Network\": str(res[\"config/Network\"]),\n",
-    "            \"Optimizer\": str(res[\"config/Optimizer\"]),\n",
-    "            \"Learning Rate\": str(res[\"config/Learning Rate\"]),\n",
-    "            \"Batch Size\": str(res[\"config/Batch Size\"]),\n",
-    "            \"Pixel Loss\": str(res[\"config/Pixel Loss\"]),\n",
-    "            \"Volume Loss\": str(res[\"config/Volume Loss\"]),\n",
-    "            \"Combine Loss\": str(res[\"config/Combine Loss\"]),\n",
-    "            \"Negative Mining\": str(res[\"config/Negative Mining\"]),\n",
-    "            \"Smooth Labeling\": str(res[\"config/Smooth Labeling\"]),\n",
-    "            \"Input Filter\": str(res[\"config/Input Filter\"]),\n",
-    "            \"Input Layer\": str(res[\"config/Input Layer\"]),\n",
-    "        }\n",
-    "        \n",
-    "        test_metrics = EvaluationMetrics(\n",
-    "            buffer_size=len(evaluation_dataloader),\n",
-    "            hyperparam=hyperparam,\n",
-    "            device=device)\n",
-    "\n",
-    "        evaluation_loop(dataloader=evaluation_dataloader, model=trained_model, metric=test_metrics, device=device)\n"
+    "    evaluation_loop(dataloader=evaluation_dataloader, model=best_trained_model, metric=test_metrics, device=device)\n"
    ]
   },
   {
@@ -796,31 +725,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "ab7dd0ce",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-03-22T05:40:48.854022Z",
-     "start_time": "2023-03-22T05:40:48.847974Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Result(metrics={'Epoch': 15, 'Loss': 0.04582178592681885, 'CrackIoU': 0.8308873176574707, 'MeanIoU': 0.9142576456069946, 'Tversky': 0.9118564128875732, 'should_checkpoint': True, 'done': True, 'trial_id': '516dd362', 'experiment_tag': '9_Batch_Size=4,Combine_Loss=class_loss_loss_CombinedLoss,Input_Filter=None,Input_Layer=LaplacianFilter,Learning_Rate=0.0001,Negative_Mining=False,Network=class_models_unet_UNet,Optimizer=class_torch_optim_adam_Adam,Pixel_Loss=FocalLoss,Smooth_Labeling=False,Volume_Loss=JaccardLoss'}, error=None, log_dir=PosixPath('/home/pirl/POC-Project/ray_results/train_2023-03-21_16-39-49/train_516dd362_9_Batch_Size=4,Combine_Loss=class_loss_loss_CombinedLoss,Input_Filter=None,Input_Layer=LaplacianFilter,Learning_Rat_2023-03-21_19-05-50'))\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(best_result)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 53,
-   "id": "3238818f",
+   "id": "aaa2da49",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-03-22T02:22:28.407968Z",
@@ -1271,37 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68f9ba97",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-03-10T05:40:18.913144Z",
-     "start_time": "2023-03-10T05:40:18.890272Z"
-    },
-    "deletable": false,
-    "editable": false,
-    "run_control": {
-     "frozen": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "best_result = results.get_best_result(metric=\"CrackIoU\", mode=\"max\", scope=\"all\")  # Get best result object\n",
-    "print(\"Best trial config: {}\".format(best_result.config))\n",
-    "print(\"Best trial final validation loss: {}\".format(best_result.metrics[\"Loss\"]))\n",
-    "print(\"Best trial final validation CrackIoU: {}\".format(best_result.metrics[\"CrackIoU\"]))\n",
-    "\n",
-    "# evaluate(test_data=test_data, result=best_result)\n",
-    "\n",
-    "results_df = results.get_dataframe(filter_metric=\"CrackIoU\", filter_mode=\"max\")  # Get all trials by CrackIoU\n",
-    "results_df.sort_values(\"CrackIoU\", ascending=False, inplace=True)\n",
-    "\n",
-    "evaluate_df(test_data=test_data, results_df=results_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3166d7e9",
+   "id": "a8633d3b",
    "metadata": {},
    "outputs": [],
    "source": []
