--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "298f8f71",
+   "id": "20e1d2d4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-05T07:05:16.344444Z",
@@ -896,11 +896,9 @@
     "    buffer_size=len(training_dataloader),\n",
     "    mode=\"Training\",\n",
     "    hyperparam={\n",
-    "        'Network': model.__class__.__name__,\n",
-    "        'Optimizer': optimizer.__class__.__name__,\n",
-    "        'Combine Loss': loss_names[0],\n",
-    "        'Pixel Loss': loss_names[1],\n",
-    "        'Volume Loss': loss_names[2],\n",
+    "        'Network': model.__class__,\n",
+    "        'Optimizer': optimizer.__class__,\n",
+    "        'Loss Function': loss_fn,\n",
     "        'Input Filter': pipe_names[1],\n",
     "        'Input Layer': pipe_names[2],\n",
     "        'Batch Size': batch_size,\n",
@@ -914,11 +912,9 @@
     "    buffer_size=len(validation_dataloader),\n",
     "    mode=\"Validation\",\n",
     "    hyperparam={\n",
-    "        'Network': model.__class__.__name__,\n",
-    "        'Optimizer': optimizer.__class__.__name__,\n",
-    "        'Combine Loss': loss_names[0],\n",
-    "        'Pixel Loss': loss_names[1],\n",
-    "        'Volume Loss': loss_names[2],\n",
+    "        'Network': model.__class__,\n",
+    "        'Optimizer': optimizer.__class__,\n",
+    "        'Loss Function': loss_fn,\n",
     "        'Input Filter': pipe_names[1],\n",
     "        'Input Layer': pipe_names[2],\n",
     "        'Batch Size': batch_size,\n",
@@ -931,11 +927,9 @@
     "test_metrics = EvaluationMetrics(\n",
     "    buffer_size=len(evaluation_dataloader),\n",
     "    hyperparam={\n",
-    "        'Network': model.__class__.__name__,\n",
-    "        'Optimizer': optimizer.__class__.__name__,\n",
-    "        'Combine Loss': loss_names[0],\n",
-    "        'Pixel Loss': loss_names[1],\n",
-    "        'Volume Loss': loss_names[2],\n",
+    "        'Network': model.__class__,\n",
+    "        'Optimizer': optimizer.__class__,\n",
+    "        'Loss Function': loss_fn,\n",
     "        'Input Filter': pipe_names[1],\n",
     "        'Input Layer': pipe_names[2],\n",
     "        'Batch Size': batch_size,\n",
